# CS163

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Project_CS163/: CMakeLists.txt  ORG_test.txt  Project_CS163.cpp  Project_CS163.h  TernarySearchTree.cpp  TernarySearchTree.hpp  add_removeFav.cpp  database.cpp  database.h  dictionary.cpp  dictionary.h  dictionary.hpp  hash_table.cpp  hash_table.h  hash_table.hpp  main.cpp  main_dictionary.hpp  quynh_nhu.cpp  slang.txt  string_util.cpp  string_util.hpp  structure.hpp  ternary_seach_tree.cpp  ternary_seach_tree.h  util.cpp  util.h  util.hpp
Project_CS163/dataset/: ORG_emotional.txt  ORG_slang.txt
Project_Dictionary/: CMakeLists.txt  main.cpp
Project_Dictionary/GUI/: dialog_addnewword.cpp  dialog_addnewword.h  dialog_addnewword.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Project_Dictionary/dataset/: ORG_emotional.txt  ORG_slang.txt  slang.txt
Project_Dictionary/operation/: TernarySearchTree.hpp  database.cpp  database.h  dictionary.cpp  dictionary.h  dictionary.hpp  hash_table.cpp  hash_table.h  hash_table.hpp  ternary_seach_tree.cpp  ternary_seach_tree.h  util.cpp  util.h
Project_Dictionary/resources/: dump_file.txt  icon.icns
